[package]
name = "staking-contract"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.4.6"
cosmwasm-schema = "1.4.6"
cw2 = "1.1.1"
cw-storage-plus = "1.1.1"
schemars = "0.8.21"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"

[dev-dependencies]
cw-multi-test = "1.0.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
